# onegov2-spatial-assistant

./: CHALLENGE.md  CHANGES.md  CHANGES_chatbot.md  LICENSE  README.md  SETUP.md
src/backend/: .env.example  pyproject.toml
src/backend/alembic/: env.py
src/backend/alembic/versions/: b2f3a1c4d5e6_add_faq_cache_table.py  c3d4e5f6a7b8_add_audit_log_table.py
src/backend/app/: auth.py  config.py  main.py
src/backend/app/models/: audit.py  chat.py  faq_cache.py
src/backend/app/routers/: chat.py  chatbot.py  scenario.py
src/backend/app/services/: audit.py  audit_sql.py  data_sources.py  workflow.py
src/backend/app/services/chatbot/: __init__.py  answer.py  corpus.py  faq.py  faq_cache.py  faq_cache_sql.py  intents.py  models.py  pii.py  recipe.py  retrieval.py  scenario_context.py  scenario_run.py  service.py  text.py
src/backend/app/services/nodes/: cite_sources.py  intent.py
src/backend/app/services/prompts/: 01_intent_analyzer.md
src/backend/app/services/scenario/: area.py  assumptions.py  calibration.py  chloride.py  citizen.py  compare.py  cumulative.py  demand.py  extraction.py  feasibility.py  fixture.py  human_scale.py  intake.py  interventions.py  models.py  official_positions.py  pdf.py  real_scoring.py  scenario_hash.py  (+5 more)
src/backend/scripts/: check_assumption_sources.py
src/backend/tests_chatbot/: conftest.py  test_answer.py  test_audit_sql.py  test_corpus.py  test_endpoint.py  test_explain_scenario.py  test_faq.py  test_faq_cache.py  test_faq_cache_sql.py  test_intents.py  test_phase5_knowledge.py  test_pii.py  test_recipe.py  test_retrieval.py  test_scenario_run.py
src/backend/tests_scenario/: conftest.py  test_area_selection.py  test_cbs_demand.py  test_citizen_pdf.py  test_compare_detail.py  test_comparison.py  test_extraction_greenpt.py  test_golden_path_a.py  test_golden_path_b.py  test_phase5.py  test_phase6.py  test_phase7.py  test_real_scoring.py  test_scenario3_builtup.py  test_scenario_endpoint.py
(+30 files in other folders)
